...
            CountryCode("TM", "Turkmenistan"),
            CountryCode("TC", "Turks and Caicos Islands"),
            CountryCode("TV", "Tuvalu"),
            CountryCode("UG", "Uganda"),
            CountryCode("UA", "Ukraine"),
            CountryCode("AE", "United Arab Emirates"),
            CountryCode("GB", "United Kingdom"),
            CountryCode("US", "United States"),
            CountryCode("UM", "United States Minor Outlying Islands"),
            CountryCode("UY", "Uruguay"),
            CountryCode("UZ", "Uzbekistan"),
            CountryCode("VU", "Vanuatu"),
            CountryCode("VE", "Venezuela"),
            CountryCode("VN", "Vietnam"),
...
