...
        modifier = Modifier
            .fillMaxWidth()
            .padding(vertical = 8.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp)
    ) {
        Text(
            text = "General WiFi Settings",
            style = titleTextStyle.copy(
                fontWeight = FontWeight.Bold,
                fontSize = if (deviceType == DeviceType.TABLET) 26.sp else 16.sp
            )
        )
        
...
            },
            modifier = Modifier.fillMaxWidth()
        )
        
        if (showSaveButton) {
            ActionButton(
                text = if (isSaving) "Saving..." else "Save Country Code"
            ) {
                if (!isSaving) {
                    isSaving = true
                    networkConfigurationViewModel.saveWifiCountryCode(
                        onSuccess = {
                            isSaving = false
...
